Make window draggable

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <body id="body">
     <div class="page darwin">
       <webview id="webview" src="https://dict.leo.org/" autosize="on"></webview>
+      <div id="draggable"></div>
     </div>
   </body>
   <script>
